[gd_scene load_steps=15 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://CanvasLayer.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 59
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=3]
action = "start_game"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 44
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 306.0
margin_right = 2.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -294.0
margin_right = -30.0
margin_bottom = -90.0
custom_fonts/font = SubResource( 1 )
text = "Classic
Trivia"
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -303.0
margin_right = 90.0
margin_bottom = -203.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 48.0
margin_top = 415.0
margin_right = 430.0
margin_bottom = 533.0
custom_fonts/font = SubResource( 7 )
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 100.0

[node name="Menu" type="Button" parent="."]
anchor_right = 0.025
anchor_bottom = 0.023
margin_left = 175.0
margin_top = 570.0
margin_right = 296.0
margin_bottom = 610.44
custom_fonts/font = SubResource( 12 )
text = "Menu"

[node name="Quit" type="Button" parent="."]
margin_left = 184.0
margin_top = 564.0
margin_right = 295.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 8 )
text = "QUIT"

[node name="Label" type="Label" parent="."]
margin_left = 293.0
margin_top = 31.0
margin_right = 387.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 9 )
text = "100"

[node name="Label2" type="Label" parent="."]
margin_left = 145.0
margin_top = 34.0
margin_right = 278.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 10 )
text = "Time Left:"

[node name="Label3" type="Label" parent="."]
anchor_left = -2.919
anchor_top = 3.372
anchor_right = -2.919
anchor_bottom = 3.372
margin_left = 1402.12
margin_top = -2181.84
margin_right = 1884.12
margin_bottom = -2087.84
custom_fonts/font = SubResource( 11 )
text = "High Score:"
align = 1

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="alg" from="CanvasLayer" to="." method="_on_CanvasLayer_alg"]
[connection signal="ari" from="CanvasLayer" to="." method="_on_CanvasLayer_ari"]
[connection signal="calc" from="CanvasLayer" to="." method="_on_CanvasLayer_calc"]
[connection signal="prob" from="CanvasLayer" to="." method="_on_CanvasLayer_prob"]
[connection signal="start" from="CanvasLayer" to="." method="_on_CanvasLayer_start"]
